--- a/index.html
+++ b/index.html
@@ -18,27 +18,74 @@
       font-family: 'Roboto';
     }
 
+    /* Navigation styles */
     .navbar {
-      background: none;
+      padding: 50px;
     }
-
     .brand-bold {
       font-weight: 700;
     }
-
     .brand-thin {
       font-weight: 300;
     }
-
     .auth-button {
       border-radius: 30px;
+      padding: 6px 25px;
+    }
+
+    /* Hero section styles */
+    .hero-message {
+      margin: auto;
+    }
+    .hero-header {
+      width: 300px;
+      font-weight: 700;
+      font-size: 2.3em;
+    }
+    .hero-header-home {
+      color: #2EA5DE;
+    }
+    .hero-button {
+      margin: auto;
+      border-radius: 30px;
+      padding: 6px 25px;
+      background-color: #43AB49;
+      color: #FFFFFF;
+    }
+    .hero-button:hover {
+      background-color: #53d059;
+    }
+    .hero-image {
+      width: 430px;
+      height: 350px;
+    }
+
+    /* mobile phones - tablets */
+    @media (max-width: 991px) {
+    }
+
+    /* tablets */
+    @media (min-width: 992px) and (max-width: 1199px) {
+      /* Hero section styles */
+      .hero-section {
+        padding: 0 100px;
+      }
+    }
+
+    /* laptops */
+    @media (min-width: 1200px) {
+      /* Hero section styles */
+      .hero-section {
+        padding: 0 150px;
+      }
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light p-4">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#"><span class='brand-bold'>ZERAKI</span brand-thin>DECOR</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,9 +110,24 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
-        <button class="btn btn-outline-secondary rounded-5 my-2 my-lg-0 my-sm-0 auth-button pr-4 pl-4">Login</button>
+        <button class="btn btn-outline-secondary rounded-5 my-2 my-lg-0 my-sm-0 auth-button">Login</button>
       </div>
     </nav>
+
+    <!-- hero section -->
+    <div class="hero-section">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 hero-message">
+          <h1 class="hero-header">We decorate your house so you feel at <span class="hero-header-home">Home</span></h1>
+          <button class="btn hero-button">Get in Touch</button>
+        </div>
+
+        <div class="col-lg-6 col-md-6">
+          <img class="hero-image" src='images/hero-image.png'>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <!-- Optional JavaScript -->
