--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       padding: 50px;
     }
     .brand-bold {
-      font-weight: 700;
+      font-weight: 900;
     }
     .brand-thin {
       font-weight: 300;
@@ -46,7 +46,7 @@
       color: #2EA5DE;
     }
     .hero-button {
-      margin: auto;
+      margin-top: 10px;
       border-radius: 30px;
       padding: 6px 25px;
       background-color: #43AB49;
@@ -60,11 +60,49 @@
       height: 350px;
     }
 
-    /* mobile phones - tablets */
+    /* About us section styles */
+    .about-us-section {
+      padding: 70px 80px;
+    }
+    .about-us-image {
+      width: 430px;
+      height: 330px;
+      text-align: center;
+    }
+    .about-us-message {
+      text-align: center;
+      margin: auto;
+    }
+
+    /* Services section */
+    .our-services-section {
+      padding: 0px 80px;
+      margin-bottom: 150px;
+      text-align: center;
+    }
+    .service-header {
+      margin-bottom: 40px;
+    }
+    .service-card {
+      padding: 20px 30px;
+      margin: 0px 50px;
+      border-radius:16px;
+      -webkit-box-shadow:  2px 2px 3px 3pxx #e1e1e3;
+      box-shadow:  2px 2px 3px 3px #e1e1e3;
+    }
+    .service-sub-header {
+      margin: 10px 0px;
+    }
+    .service-p {
+      color: #707070;
+      padding: 10px;
+    }
+
+    /* Mobile phones - tablets */
     @media (max-width: 991px) {
     }
 
-    /* tablets */
+    /* Tablets */
     @media (min-width: 992px) and (max-width: 1199px) {
       /* Hero section styles */
       .hero-section {
@@ -72,7 +110,7 @@
       }
     }
 
-    /* laptops */
+    /* Laptops */
     @media (min-width: 1200px) {
       /* Hero section styles */
       .hero-section {
@@ -84,7 +122,7 @@
 
 <body>
   <div class="container">
-    <!-- navbar -->
+    <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#"><span class='brand-bold'>ZERAKI</span brand-thin>DECOR</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -114,7 +152,7 @@
       </div>
     </nav>
 
-    <!-- hero section -->
+    <!-- Hero section -->
     <div class="hero-section">
       <div class="row">
         <div class="col-lg-6 col-md-6 hero-message">
@@ -124,6 +162,40 @@
 
         <div class="col-lg-6 col-md-6">
           <img class="hero-image" src='images/hero-image.png'>
+        </div>
+      </div>
+    </div>
+
+    <!-- About us section -->
+    <div class="about-us-section">
+      <div class="row">
+        <div class="col-md-6 col-lg-6 about-us-image">
+          <img class="about-us-image" src='images/about-us.png'>
+        </div>
+        <div class="col-md-6 col-lg-6 about-us-message">
+          <h3>About Us</h3>
+          <p>We pride ourselves in creating beautiful homes. We help you along the way from designing to shopping for the best home décor experience.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Our services section -->
+    <div class="our-services-section">
+      <h3 class="service-header">Our Services</h3>
+      <div class="row">
+        <div class="col-md-6 col-lg-6">
+          <div class="service-card">
+            <img src="images/home-sm.png">
+            <h5 class="service-sub-header">Home Decor</h5>
+            <p class="service-p">Our team of experienced interior designers follow best design practices to help you have a good design for your home.</p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-6">
+          <div class="service-card">
+            <img src="images/furniture-supply-sm.png">
+            <h5 class="service-sub-header">Furniture Supplies</h5>
+            <p class="service-p">We help you shop for the best looking furniture from our endeared collection. If you have your ideas, don't worry, we will build custom ones for you.</p>
+          </div>
         </div>
       </div>
     </div>
