--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       font-family: 'Roboto';
     }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
     /* Navigation styles */
     .navbar {
       padding: 50px;
@@ -165,7 +169,10 @@
       box-shadow: 2px 2px 3px 3px #e1e1e3;
     }
 
-    .first-name-input, .second-name-input, .email-input, .subject-input {
+    .first-name-input,
+    .second-name-input,
+    .email-input,
+    .subject-input {
       margin-top: 30px;
     }
 
@@ -202,8 +209,68 @@
       padding: 0px 450px;
     }
 
+    .footer-img {
+      width: 40px;
+      height: 40px;
+    }
+
     /* Mobile phones - tablets */
-    @media (max-width: 991px) {}
+    @media (max-width: 991px) {
+
+      /* Hero section styles */
+      .hero-message {
+        margin: 50px;
+      }
+
+      .hero-image {
+        margin: 0px 50px;
+      }
+
+      /* About us section */
+      .about-us-section {
+        margin: 50px 0px;
+        padding: 50px;
+        border-top: 5px solid #e2e2e2;
+        border-bottom: 5px solid #e2e2e2;
+      }
+
+      .about-us-image {
+        margin: auto;
+      }
+
+      .about-us-message {
+        margin-top: 50px;
+      }
+
+      /* Services section */
+      .our-services-section {
+        padding: 0px;
+      }
+
+      .service-card {
+        margin-bottom: 50px;
+      }
+
+      /* Projects section */
+      .project-message {
+        padding: 30px;
+        text-align: center;
+      }
+
+      /* Contact section */
+      .contact-card {
+        margin-top: 50px;
+      }
+
+      /* Footer section */
+      .footer-social-links {
+        padding: 0px;
+      }
+
+      .footer-col {
+        margin: 10px;
+      }
+    }
 
     /* Tablets */
     @media (min-width: 992px) and (max-width: 1199px) {
@@ -211,6 +278,23 @@
       /* Hero section styles */
       .hero-section {
         padding: 0 100px;
+      }
+
+      /* About us section */
+      .about-us-section {
+        margin: 50px 0px;
+        padding: 50px;
+      }
+
+      /* Services section */
+      .service-card {
+        padding: 20px 20px 10px 20px;
+        margin: 10px;
+      }
+
+      /* Footer section */
+      .footer-col {
+        margin: 10px;
       }
     }
 
@@ -226,7 +310,8 @@
 </head>
 
 <body>
-  <div id="app" class="container">
+  <div id="app">
+  <div class="container">
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#"><span class='brand-bold'>ZERAKI</span brand-thin>DECOR</span></a>
@@ -241,19 +326,20 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
-        <button class="btn btn-outline-secondary rounded-5 my-2 my-lg-0 my-sm-0 auth-button">Login</button>
+        <button class="btn btn-outline-secondary rounded-5 my-2 my-lg-0 my-sm-0 auth-button" data-toggle="modal"
+          data-target="#loginModal">Login</button>
       </div>
     </nav>
 
@@ -272,7 +358,7 @@
     </div>
 
     <!-- About us section -->
-    <div class="about-us-section">
+    <div class="about-us-section" id="about">
       <div class="row">
         <div class="col-md-6 col-lg-6 about-us-image">
           <img class="about-us-image" src='images/about-us.png'>
@@ -286,7 +372,7 @@
     </div>
 
     <!-- Our services section -->
-    <div class="our-services-section">
+    <div class="our-services-section" id="services">
       <h3 class="service-header">Our Services</h3>
       <div class="row">
         <div class="col-md-6 col-lg-6">
@@ -309,7 +395,7 @@
     </div>
 
     <!-- Our projects section -->
-    <div class="projects-section">
+    <div class="projects-section" id="projects">
       <h3 class="projects-header">Our Projects</h3>
       <div id="carouselProjects" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -365,7 +451,7 @@
     </div>
 
     <!-- Contact section -->
-    <div class="contact-section">
+    <div class="contact-section" id="contact">
       <h3 class="contact-header">Say Hi</h3>
       <div class="row">
         <div class="col-md-6 col-lg-6">
@@ -401,23 +487,87 @@
     </div>
   </div>
 
+  <!-- Footer section -->
   <div class="container-fluid footer-section">
     <div class="row">
       <h3 class="footer-header">Our Socials</h3>
     </div>
     <div class="row footer-social-links">
-      <div class="col-md-4 col-lg-4">
-        <a href="#"><img src="images/instagram.png"></a>
+      <div class="col-md-4 col-lg-4 footer-col">
+        <a href="#"><img class="footer-img" src="images/instagram.png"></a>
       </div>
-      <div class="col-md-4 col-lg-4">
-        <a href="#"><img src="images/twitter.png"></a>
+      <div class="col-md-4 col-lg-4 footer-col">
+        <a href="#"><img class="footer-img" src="images/twitter.png"></a>
       </div>
-      <div class="col-md-4 col-lg-4">
-        <a href="#"><img src="images/facebook.png"></a>
+      <div class="col-md-4 col-lg-4 footer-col">
+        <a href="#"><img class="footer-img" src="images/facebook.png"></a>
       </div>
     </div>
   </div>
 
+  <!-- Login Modal -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="login"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-center" id="exampleModalLabel">Login</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <input class="form-control" type="email" placeholder="Email" required>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="password" placeholder="Password" required>
+          </div>
+          <p>{{ message }}</p>
+          <p>Don't have an account? <a href="#" @click="register">Register</a></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Login</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Register Modal -->
+  <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="register"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-center" id="exampleModalLabel">Register</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <input class="form-control" type="text" placeholder="First Name" required>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="text" placeholder="Second Name" required>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="email" placeholder="Email" required>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="password" placeholder="Password" required>
+          </div>
+          <div class="form-group">
+            <input class="form-control" type="password" placeholder="Confirm Password" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Register</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
